--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "quv"
-version = "0.0.2"
+version = "0.0.3"
 description = "my python tool list"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.10"
 dependencies = ["httpx>=0.28.1"]
 
 [project.urls]
@@ -18,4 +18,4 @@ module = "quv"
 
 [project.scripts]
 qping = "quv.ping.main:cli"
-tracker = "quv.tracker.main:cli"
+qtracker = "quv.tracker.main:cli"
