--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "quv"
-version = "0.0.6"
+version = "0.0.7"
 description = "my python tool list"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "blake3>=1.0.8",
     "httpx>=0.28.1",
+    "pymdp",
 ]
 
 [project.urls]
@@ -18,6 +19,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 module = "quv"
+
+[tool.uv.sources]
+pymdp = { git = "https://github.com/qmaru/pymdp.git" }
 
 [project.scripts]
 qping = "quv.ping.main:cli"
